# stockfish-mcp-server

./: .gitignore  README.md  pyproject.toml  requirements.txt  server.py  test_server.py
engine/: download-stockfish.sh
examples/: mcp-config.json
